schema/testdata/validation_expression_lhs_root_model_missing/schema.keel
model Customer {
  fields {
    orders Order[]
  }

  @permission(
    expression: cufstomer.orders.ratings.rated == true,
    actions: [get, update]
  )
}

model Order {
  fields {
    ratings Rating
    customer Customer
  }
}

model Rating {
  fields {
    rated Boolean
  }
}